--- a/cxglobal.html
+++ b/cxglobal.html
@@ -1270,7 +1270,9 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#cxtoLower,char"
+      <li><a class="reference" href="#newLine,int"
+    title="newLine(n: int = 1): string"><wbr />new<wbr />Line<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#cxtoLower,char"
     title="cxtoLower(c: char): char"><wbr />cxto<wbr />Lower<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#getTerminalWidth,"
     title="getTerminalWidth(): int"><wbr />get<wbr />Terminal<wbr />Width<span class="attachedType" style="visibility:hidden"></span></a></li>
@@ -1516,6 +1518,11 @@ Description : provides many basic utility functions required by other modules</p
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
+<dt id="newLine"><a name="newLine,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">newLine</span><span class="Other">(</span><span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dd>
+issues n newLines , default = 1
+
+</dd>
 <dt id="cxtoLower"><a name="cxtoLower,char"></a><pre><span class="Keyword">proc</span> <span class="Identifier">cxtoLower</span><span class="Other">(</span><span class="Identifier">c</span><span class="Other">:</span> <span class="Identifier">char</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">char</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 <p>cxtoLower</p>
@@ -1994,7 +2001,7 @@ partially lifted from an earler macro in terminal.nim and removed new line curre
 <dl class="item">
 <dt id="*"><a name="*.t,string,int"></a><pre><span class="Keyword">template</span> <span class="Identifier">`*`</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span></pre></dt>
 <dd>
-
+returns input string  n times mimicking python
 
 </dd>
 <dt id="tw"><a name="tw.t,"></a><pre><span class="Keyword">template</span> <span class="Identifier">tw</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span></pre></dt>
@@ -2225,7 +2232,7 @@ returns a colorpalette which can be used to iterate over</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-03-17 12:08:26 UTC</small>
+        <small>Made with Nim. Generated: 2018-03-17 18:26:37 UTC</small>
       </div>
     </div>
   </div>
